# word-stacker

./: .clang-format  .gitignore  LICENSE  README.md
build-flags/: build-flags-clang.txt  build-flags-gnu-valgrind.txt  build-flags-gnu.txt  build-flags-msvc.txt
src/: CMakeLists.txt  args-parser.cpp  args-parser.hpp  assert-or-throw.hpp  color-range.cpp  color-range.hpp  file-parser.cpp  file-parser.hpp  main.cpp  parse-displayer.cpp  parse-displayer.hpp  parse-type-enum.cpp  parse-type-enum.hpp  report-maker.cpp  report-maker.hpp  strings.hpp  word-count-stats.cpp  word-count-stats.hpp  word-count.cpp  word-count.hpp  word-list.cpp  word-list.hpp
